--- a/index.html
+++ b/index.html
@@ -9,12 +9,30 @@
 	</head>
 
 	<body>
-		<div class="wrapper">
-			<p class="instruction">Enter the task.<br> Press "Ctrl+Enter" to save.</p>
-			<textarea id="newTask"></textarea>
-			<h4 id="taskListHeader">Nothing to do... boring...</h4>
+			<div class="description"> 
+					<p>rewritten and improved from jQuery: <a href="https://codepen.io/m019m1/pen/QWLMPBd" target="_blank">here</a></p>
+					<p>it's mobile-friendly</p>
+					<p>it's editable</p>
+					<p>it's auto-save (auto-save all your tasks (and its condition: done or active) in local storage)</p>
+					<p>it's resizable horizontally (by pulling the right-bottom corner, desktop-only)</p>
+			<div class="wrapper">
+
+
+			<div class="instruction">
+				<p> Enter the task.</p>
+				<p> <i>Ctrl+Enter</i> or <b>Save</b> to save </p>
+			</div>
+			<div class="taskCreator">
+				<textarea id="taskCreator__editor"></textarea>
+				<button id="save">Save</button>
+			</div>
+
+			<div class="header">
+				<h4 id="taskListHeader">Nothing to do... boring...</h4>
+				<p class="hidden" id="tooltip"> Double click to edit. <i>Ctrl+Enter</i> or <b>Save</b> to save. <i>Esc</i> or click on another area to exit</p>
+			</div>
 			<ul id="taskList"></ul>
-		</div>
+
 		<script src="script.js"></script>
 	</body>
 </html>
