rewrite with scss

--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 	</head>
 
 	<body>
-			<div class="description"> 
-					<p>rewritten and improved from jQuery: <a href="https://codepen.io/m019m1/pen/QWLMPBd" target="_blank">here</a></p>
-					<p>it's mobile-friendly</p>
-					<p>it's editable</p>
-					<p>it's auto-save (auto-save all your tasks (and its condition: done or active) in local storage)</p>
-					<p>it's resizable horizontally (by pulling the right-bottom corner, desktop-only)</p>
-			<div class="wrapper">
-
-
-			<div class="instruction">
+		<div class="description"> 
+				<p>rewritten and improved from jQuery: <a href="https://codepen.io/m019m1/pen/QWLMPBd" target="_blank">here</a></p>
+				<p>it's mobile-friendly</p>
+				<p>it's editable</p>
+				<p>it's auto-save (auto-save all your tasks (and its condition: done or active) in local storage)</p>
+				<p>it's resizable horizontally (by pulling the right-bottom corner, desktop-only)</p>
+		</div>
+			
+			
+		<div class="wrapper">
+			<div class="taskCreatorHeader">
 				<p> Enter the task.</p>
 				<p> <i>Ctrl+Enter</i> or <b>Save</b> to save </p>
 			</div>
@@ -32,6 +33,7 @@
 				<p class="hidden" id="tooltip"> Double click to edit. <i>Ctrl+Enter</i> or <b>Save</b> to save. <i>Esc</i> or click on another area to exit</p>
 			</div>
 			<ul id="taskList"></ul>
+		</div>
 
 		<script src="script.js"></script>
 	</body>
